Fixed header item spacing

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ header {
 }
 
 .headerContent {
-    padding: 2.5em;
+    padding: 2.2em;
     position: sticky;
 }
 
